--- a/src/main/resources/templates/admin_section.html
+++ b/src/main/resources/templates/admin_section.html
@@ -126,7 +126,7 @@
                                                         <div class="modal-body">
 
 <!--                                                            Начало Тело Модальной-->
-                                                            <form th:method="PATCH" th:action= "@{/admin/editUser/{id}(id=${user.getId()})}">
+                                                            <form th:method="PATCH" th:action= "@{/admin/{id}(id=${user.getId()})}">
                                                                 <div class="form-group">
                                                                     <label class="row font-weight-bold justify-content-center" for="id">ID </label>
                                                                     <input type="text" class="form-control" th:value="*{user.id}" id="id" readonly/>
@@ -152,10 +152,17 @@
                                                                     <input type="text" class="form-control" th:value="*{user.password}" id="password"/>
                                                                 </div>
 
+
+
                                                                 <label class="row font-weight-bold justify-content-center" for="roles">Role</label>
-                                                                <select multiple class="form-control" size="2" th:value="*{user.roles}" id="roles" name="roles">
-                                                                    <option value="1">ADMIN</option>
-                                                                    <option value="2">USER</option>
+                                                                <select multiple class="form-control" size="2"  id="roles" name="roles">
+<!--                                                                    <option value="1">ADMIN</option>-->
+<!--                                                                    <option th:text="${roleList.get(0).getNoPrefix()}"> </option>-->
+                                                                    <option
+                                                                            th:each="roles : ${roleList}"
+                                                                            th:text="${roles.getNoPrefix()}"
+                                                                            th:value = "${roles.id}"
+                                                                    > </option>
                                                                 </select>
 
 <!--                                                                <p>-->
