--- a/src/main/resources/templates/admin_section.html
+++ b/src/main/resources/templates/admin_section.html
@@ -60,7 +60,7 @@
                     >Admin</a>
                     <a type="button" class="btn btn-block btn-outline-primary" href="/user"
                     >User</a>
-             а
+
                 </div>
                 <!--Боковая левая панель конец-->
 
@@ -113,7 +113,7 @@
                                                 <a type="button" class="btn btn-danger" th:href="${'#delete' + user.id}"
                                                    data-toggle="modal">Delete</a>
                                             </td>
-                                    <!-Начало Модальное окно изменения пользователя-->
+                                    <!--Начало Модальное окно изменения пользователя-->
                                             <div class="modal fade"  th:id="${'edit'+user.id}" tabindex="-1" role="dialog"  aria-hidden="true">
                                                 <div class="modal-dialog modal-dialog-centered" role="document">
                                                     <div class="modal-content">
@@ -126,7 +126,7 @@
                                                         <div class="modal-body">
 
 <!--                                                            Начало Тело Модальной-->
-                                                            <form th:method="PATCH" th:action= "@{/admin/{id}(id=${user.getId()})}">
+                                                            <form th:method="POST" th:action= "@{/admin/editUser/{id}(id=${user.getId()})}" >
                                                                 <div class="form-group">
                                                                     <label class="row font-weight-bold justify-content-center" for="id">ID </label>
                                                                     <input type="text" class="form-control" th:value="*{user.id}" id="id" readonly/>
@@ -162,6 +162,7 @@
                                                                             th:each="roles : ${roleList}"
                                                                             th:text="${roles.getNoPrefix()}"
                                                                             th:value = "${roles.id}"
+                                                                            th:selected="${user.roles.contains(roles)}"
                                                                     > </option>
                                                                 </select>
 
@@ -178,11 +179,14 @@
 <!--                                                                <br>-->
 
 <!--                                                                Конец тела окна-->
-                                                        </div>
+
                                                         <div class="modal-footer">
                                                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                                                             <button type="submit" class="btn btn-primary">Edit</button>
                                                         </div>
+
+                                                            </form>
+                                                    </div>
                                                     </div>
                                                 </div>
                                             </div>
