--- a/src/main/resources/templates/admin_section.html
+++ b/src/main/resources/templates/admin_section.html
@@ -126,30 +126,30 @@
                                                         <div class="modal-body">
 
 <!--                                                            Начало Тело Модальной-->
-                                                            <form th:method="POST" th:action= "@{/admin/editUser/{id}(id=${user.getId()})}" >
+                                                            <form th:method="PATCH" th:action= "@{/admin/editUser/{id}(id=${user.getId()})}" th:object="${user}">
                                                                 <div class="form-group">
                                                                     <label class="row font-weight-bold justify-content-center" for="id">ID </label>
-                                                                    <input type="text" class="form-control" th:value="*{user.id}" id="id" readonly/>
+                                                                    <input type="text" class="form-control" th:field="*{id}" id="id" readonly/>
                                                                 </div>
                                                                 <div class="form-group">
                                                                 <label class="row font-weight-bold justify-content-center" for="name">Name </label>
-                                                                <input type="text" class="form-control" th:value="*{user.name}" id="name"/>
+                                                                <input type="text" class="form-control" th:field="*{name}" id="name"/>
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label class="row font-weight-bold justify-content-center" for="lastname">Last name</label>
-                                                                    <input type="text" class="form-control" th:value="*{user.lastname}" id="lastname"/>
+                                                                    <input type="text" class="form-control" th:field="*{lastname}" id="lastname"/>
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label class="row font-weight-bold justify-content-center" for="age">Age</label>
-                                                                    <input type="number" class="form-control" th:value="*{user.age}" id="age"/>
+                                                                    <input type="number" class="form-control" th:field="*{age}" id="age"/>
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label class="row font-weight-bold justify-content-center" for="email">Email</label>
-                                                                    <input type="text" class="form-control" th:value="*{user.email}" id="email"/>
+                                                                    <input type="text" class="form-control" th:field="*{email}" id="email"/>
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label class="row font-weight-bold justify-content-center" for="password">Password</label>
-                                                                    <input type="text" class="form-control" th:value="*{user.password}" id="password"/>
+                                                                    <input type="text" class="form-control" th:value="*{password}" id="password"/>
                                                                 </div>
 
 
