--- a/src/main/resources/templates/userAuth.html
+++ b/src/main/resources/templates/userAuth.html
@@ -23,8 +23,8 @@
         <div class="col-sm-12">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
 
-                <li class="list-inline-item"><h4 th:text="${user.getEmail()}"></h4></li>
-                <li class="list-inline-item"><h4 th:text="' with roles: ' + ${user.getRoleString()}"></h4></li>
+                <li class="list-inline-item"><h4 th:text="${admin.getEmail()}"></h4></li>
+                <li class="list-inline-item"><h4 th:text="' with roles: ' + ${admin.getRoleString()}"></h4></li>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -98,15 +98,15 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <div th:object="${user}">
+                        <div th:object="${admin}">
                             <tr>
-                                <td th:utext="${user.getId()}">VALUE</td>
-                                <td th:utext="${user.getName()}">VALUE</td>
-                                <td th:utext="${user.getLastname()}">VALUE</td>
-                                <td th:utext="${user.getAge()}">VALUE</td>
-                                <td th:utext="${user.getEmail()}">VALUE</td>
+                                <td th:utext="${admin.getId()}">VALUE</td>
+                                <td th:utext="${admin.getName()}">VALUE</td>
+                                <td th:utext="${admin.getLastname()}">VALUE</td>
+                                <td th:utext="${admin.getAge()}">VALUE</td>
+                                <td th:utext="${admin.getEmail()}">VALUE</td>
 
-                                <td th:utext="${user.getRoleString()}">VALUE</td>
+                                <td th:utext="${admin.getRoleString()}">VALUE</td>
 
 
                             </tr>
