--- a/src/main/resources/templates/userAuth.html
+++ b/src/main/resources/templates/userAuth.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!--    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">-->
+
     <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous">
 
 </head>
@@ -30,25 +30,17 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav mr-auto">
-                        <!--                                       <li class="list-inline-item"><h4 th:text="${#authorization.getAuthentication().getName()}"></h4></li>-->
-<!--                                            <li class="list-inline-item"><h4 class="lead" th:text="' with roles: ' + "></h4></li>-->
-                    </ul>
+                    <ul class="navbar-nav mr-auto"> </ul>
 
                     <a class="navbar-brand" href="/logout">Logout</a>
-                    <!--                <form name="logOut" th:action="@{/logout}" method="post">-->
-                    <!--                    <input type="submit" value="Logout">-->
-                    <!--                </form>-->
-                    <!--        <span class="navbar-text">-->
-                    <!--      Navbar text with an inline element-->
-                    <!--    </span>-->
+
                 </div>
             </nav>
         </div>
     </div>
 </div>
 
-
+<br>
 
 <!--Центральная панель с таблицей -->
 <div class="container-fluid">
@@ -62,9 +54,7 @@
                     >Admin</a>
                     <a type="button" class="btn btn-block disabled btn-outline-primary" href="/user"
                     >User</a>
-                    <!--                        <button type="button" class="btn btn-block disabled btn-outline-primary" href="/user">-->
-                    <!--                            User-->
-                    <!--                        </button>-->
+
                 </div>
                 <!--Боковая левая панель конец-->
 
@@ -76,25 +66,12 @@
                     <table class="table table-striped">
                         <thead>
                         <tr>
-                            <th>
-                                ID
-                            </th>
-                            <th>
-                                First Name
-                            </th>
-                            <th>
-                                Last Name
-                            </th>
-                            <th>
-                                Age
-                            </th>
-                            <th>
-                                Email
-                            </th>
-                            <th>
-                                Role
-                            </th>
-
+                            <th>ID</th>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>Age</th>
+                            <th>Email</th>
+                            <th>Role</th>
                         </tr>
                         </thead>
                         <tbody>
